# ai_course_architect

./: .gitignore  README.md  app.py  database.py  docker-compose.yml  main.py  pyproject.toml
agents/: deconstructor.py  librarian.py  llm.py  professor.py
assets/: style.css
docker/: .dockerignore  Dockerfle  docker-compose.yml
graph/: neo4j_client.py
tools/: search.py
workflow/: workflow.py
